# libWinTF8

./: CMakeLists.txt  Makefile  Readme.md  configure
docs/: conf.ini  index.md
src/: CMakeLists.txt  argv.cpp  argv.h  concp.cpp  concp.h  env.cpp  env.h  fclose.cpp  fileio.h  fopen.cpp  fopen.h  freopen.cpp  initcon.cpp  initcon.h  libwintf8.h  localconv.h  localconv_local_u8.cpp  localconv_u8_dos.cpp  localconv_u8_local.cpp  printf.cpp  printf.h  remove.cpp  rename.cpp  spawn.cpp  spawn.h  streamio.h  termio.cpp  termio.h  u8ios.cpp  u8ios.h  u8str.cpp  u8str.h  utf.cpp  utf.h  utfconv.cpp  utfconv.h  utfconv_u8_u8.cpp  utfconv_u8_wide.cpp  utfconv_wide_u8.cpp  utils.h
tools/: toolchain-i686-w64-mingw32.cmake
